--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Be Vietnam Pro', sans-serif;
     min-height: 100vh;
-    max-height: 1440px;
+    max-width: 480px;
     margin: auto;
     background-color: green ;}
 video{display: flex; flex-direction: column;margin-top: -2%;}
